<resources>
    <string name="app_name">practicas</string>
    <string name="tv_correo">Correo Eléctronico</string>
    <string name="tv_clave">Contraseña</string>
    <string name="title_activity_central">Central</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    //SEMANA 02 esto se modifica
    <string name="menu_practica">Práctica</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bt_actualizar">Actualizar</string>
    <string name="menu_delete">Eliminar estado</string>
    <string name="msg_seguroBorrar">¿Está seguro de eliminar?</string>
    <string name="no">No</string>
    <string name="si">Si</string>

    <string name="msg_nombre">Nombre del país</string>
    <string name="msg_capital">Nombre de la capital</string>
    <string name="msg_poblacion">Población (Número de personas)</string>
    <string name="msg_costas">Costas (Si o No tiene costas)</string>
    <string name="msg_estado_add">Estado Agregado</string>
    <string name="msg_estado_update">Estado Actualizado</string>
    <string name="bt_agregar">Agregar</string>

</resources>
