<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.practica.UpdatePracticaFragment" >

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_nombre"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_capital"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_capital"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_poblacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_poblacion"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_costas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_costas"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/bt_actualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_actualizar" />
</LinearLayout>